--- a/src/App.css
+++ b/src/App.css
@@ -54,3 +54,11 @@
   cursor: pointer;
   background: yellow;
 }
+
+.cell[data-player="1"] {
+  background: green;
+}
+
+.cell[data-player="2"] {
+  background: red;
+}
